# mnmd-anki-sync

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  DISTRIBUTION.md  EDITOR_SETUP.md  README.md  agents-syntax.md  example-deck.md  pyproject.toml  simple-example.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
src/mnmd_anki_sync/: __init__.py  __main__.py  cli.py  config.py  models.py  syntax-notes.md
src/mnmd_anki_sync/anki/: client.py  note_builder.py  note_type.py
src/mnmd_anki_sync/parser/: cloze_parser.py  context_extractor.py  prompt_generator.py  scope_resolver.py
src/mnmd_anki_sync/sync/: id_writer.py  syncer.py
src/mnmd_anki_sync/utils/: base52.py  exceptions.py  file_id.py  markdown_utils.py
tests/fixtures/markdown/: test_example.md
tests/unit/: test_anki_client.py  test_base52.py  test_cli.py  test_cloze_parser.py  test_config.py  test_context_extractor.py  test_file_id.py  test_grouped_cloze.py  test_id_writer.py  test_markdown_utils.py  test_models.py  test_note_builder.py  test_note_type.py  test_prompt_generator.py  test_scope_resolution_integration.py  test_scope_resolver.py  test_syncer.py
